# perception_tools

./: CMakeLists.txt  README.md  package.xml
googlenet/: CMakeLists.txt  setup.py
googlenet/cpp/: load_googlenet.cpp  test_googlenet.cpp
googlenet/scripts/: simple_test.py  store_googlenet_as_script.py
googlenet/src/googlenet/: __init__.py
lenet/: CMakeLists.txt  README.md  setup.py
lenet/cpp/: load_lenet.cpp  test_lenet.cpp  test_lenet_script.cpp
lenet/scripts/: save_script_lenet.py  store_lenet_as_script.py  test_lenet.py  train_lenet.py
lenet/src/lenet5/: __init__.py  helpers.py  lenet5_class.py
resnet/: CMakeLists.txt
resnet/cpp/: test_resnet.cpp
resnet/scripts/: resnet_tracing.py  store_resnet_as_script.py  test_resnet.py
resnet/src/: load_resnet.cpp
